Attempting to fix width on mobile

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   background-color: #000000;
 }
 
-@media only screen and (min-width: 961px) {
+@media only screen and (min-width: 1200px) {
   body {
     max-width: 800px;
     border-left: 30vw solid;
@@ -10,9 +10,9 @@ body {
   }
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 1199px) {
   body {
-    max-width: 960px;
+    max-width: 1200px;
   }
 }
 
